Add per-epc and per-round intervals